--- a/Client/package.json
+++ b/Client/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
