--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1"
   },
