--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
