--- a/Client/package.json
+++ b/Client/package.json
@@ -13,9 +13,10 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.477.0",
-    "next": "15.2.1",
+    "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
